--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .navbar {
   overflow: hidden;
   background-color: #333;
-  font-family: Arial;
+  font-family: 'Arial Bold', sans-serif;
 }
 
 /* Links inside the navbar */
