--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .navbar {
   overflow: hidden;
   background-color: #333;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Arial';
 }
 
 /* Links inside the navbar */
@@ -42,7 +42,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #000000;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -51,7 +51,7 @@
 /* Links inside the dropdown */
 .dropdown-content a {
   float: none;
-  color: black;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
