--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 
 /* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: red;
 }
 
 /* Show the dropdown menu on hover */
